<resources>
    <string name="app_name">Lima Segura</string>
    <string name="olvidaste_contraseña">Has olvidado tu contraseña?</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="texto_informativo_top">Podrás visualizar los principales números de emergencia por distrito en la zona Lima</string>
    <string name="contraseña">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="sin_registrarte">Aún no te has registrado?</string>
    <string name="tambien_puedes">O puedes usar</string>
    <string name="google">Google</string>
    <string name="faceook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="texto_registro">Al momento de registrarte podrás mantenerte al tanto de los cambios realizados</string>
    <string name="tienes_cuenta">Ya tienes cuenta?</string>
    <string name="registrarse">Registrarse</string>
    <string name="apellido">Apellido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_card_view">Apoya a este proyecto llamado LIMA SEGURA, en una futura versión tendrá mejoras visuales como información .</string>
    <string name="texto_exclamacion">Toda información es recopilada de las paginas principales de los servicios.</string>
    <string name="soporte_desarollador">Soporte desarollador</string>
    <string name="texto_mantenimiento">Mantenimiento continuo de la información</string>
    <string name="texto_seguro_recomendar">Cuentale a tus amigos sobre LIMA SEGURA</string>
    <string name="texto_recomendar">Recomendar a un amigo</string>
    <string name="mas">Más</string>
    <string name="version">V 0.0.2.0</string>
    <string name="linked_in">https://www.linkedin.com/in/paul-guillen-acu%C3%B1a-61ab9319a/</string>
    <string name="github">https://github.com/PaulGuillen?tab=repositories</string>
    <string name="terminos">Terminos de servicio</string>
    <string name="politicas">Políticas de privacidad</string>
    <string name="name_station">Nombre de la estacion</string>
    <string name="district_station">Distrito de la estacion</string>
    <string name="centra_emergencias">Emergencias</string>
    <string name="inicial">Inicial</string>
    <string name="direccion_del_lugar">Direccion del lugar</string>
    <string name="distrito_lugar">Distrito del lugar</string>
    <string name="nombre_lugar">Nombre del lugar</string>
    <string name="llamar">Llamar</string>
    <string name="descripcion_lugar">Descripcion del lugar</string>
    <string name="año_funcion">Año de fundacion</string>
    <string name="nombre_categoria">Nombre de categoria</string>
    <string name="busca_por_distrito">Busca por distrito....</string>
    <string name="estaciones_lima">Estaciones de Lima</string>
    <string name="ver_todo">Ver todo</string>
    <string name="distrito_de_lima">Distrito de Lima</string>
    <string name="gobierno_del_per">Gobierno del Perù</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="email_user">Email del usuario</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="apellido_usuario">Apellido Usuario</string>
    <string name="enviar">Lima Segura es una app el cual nos ofrece información acerca de los servicios gubernamentales</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github_text">Github</string>
    <string name="default_SIGN_IN">1032103538965-1a5asmjco5bm2p1k627643cqsd5k7tbl.apps.googleusercontent.com</string>
    <string name="servicio_ciudadano">Servicio Ciudadano</string>
    <string name="cambiar_vista">Cambiar vista</string>
    <string name="logo_principal">logo_main</string>
    <string name="enviar_password">Enviar correo</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="lima">Lima</string>
    <string name="segura">Segura</string>
    <string name="ic_settings">ic_settings</string>
    <string name="ic_information">ic_information</string>
    <string name="ic_back">ic_back</string>
    <string name="noticias_menu">Noticias</string>
    <string name="servicios_menu">Servicios</string>
    <string name="distritos_menu">Distritos</string>
    <string name="inicio_menu">Inicio</string>
    <string name="news_card">news_card</string>
    <string name="district_lima_image">district_lima_image</string>
    <string name="titulo_noticias">Titulo</string>
    <string name="resumen_noticias">Resumen</string>
    <string name="palabras_clave_noticias">Palabras Clave</string>
    <string name="fecha_noticias">Fecha</string>
    <string name="image_dolar_home">image_dolar_home</string>
    <string name="global_home">global_home</string>
    <string name="servicios_inicipo">servicios_home</string>
    <string name="noticias_incio">noticias_incio</string>
    <string name="seleccione_su_rea_preferida">Secciones disponibles</string>
    <string name="informacion_uit_dolar">Información diária</string>
    <string name="compra_home">Compra :</string>
    <string name="dolar_36">dolar_36</string>
    <string name="valor_del_dol_r_usd">Valor del dolár (USD)</string>
    <string name="venta_home">Venta :</string>
    <string name="sitio_home">Sitio</string>
    <string name="venta_inicio_card">Venta</string>
    <string name="compra_inicio_card">Compra</string>
    <string name="valor_de_uit">Valor de UIT</string>
    <string name="uit">UIT :</string>
    <string name="uit_card">UIT</string>
    <string name="periodo">Periodo :</string>
    <string name="periodo_Card">Periodo</string>
    <string name="image_con_connection">image_con_connection</string>
    <string name="no_connection_found">No estas conectado a internet!</string>
    <string name="bombero_card_station">bombero_card_station</string>
    <string name="image_card_two">image_card_two</string>
    <string name="image_card_three">image_card_three</string>
    <string name="ic_phone_detail">ic_phone_detail</string>
    <string name="salir">Salir</string>
    <string name="deperu">DePeru</string>
    <string name="argentina">Argentina</string>
    <string name="colombia">Colombia</string>
    <string name="cuba">Cuba</string>
    <string name="m_xico">México</string>
    <string name="venezuela">Venezuela</string>
    <string name="deperu_com">DePeru.com</string>
    <string name="m_xico">México</string>
    <string name="venezuela">Venezuela</string>

</resources>