<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewQuoteDollar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:visibility="gone"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/dolar_sol"
            android:contentDescription="@string/image_dolar_home"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/dolar"
                android:contentDescription="@string/dolar_36" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:gravity="center"
                android:paddingStart="10dp"
                android:text="@string/valor_del_dol_r_usd"
                android:textColor="@color/blue_dark"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:padding="7dp"
                android:text="@string/compra_home"
                android:textAlignment="textEnd"
                android:textColor="@color/blue_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/purchaseQuote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:padding="7dp"
                android:text="@string/compra_inicio_card"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:padding="7dp"
                android:text="@string/venta_home"
                android:textAlignment="textEnd"
                android:textColor="@color/blue_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sellerQuote"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:padding="7dp"
                android:text="@string/venta_inicio_card"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/siteQuote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/monserrat_alternates_medium"
            android:padding="10dp"
            android:text="@string/sitio_home"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DFDFDF" />

        <TextView
            android:id="@+id/dateQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingEnd="10dp"
            android:text="@string/fecha_noticias"
            android:textAlignment="textEnd"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

