<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_news"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_newspaper"
            android:contentDescription="@string/news_card"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/titulo_noticias"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/resumen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/resumen_noticias" />

            <TextView
                android:id="@+id/palsclave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:maxLines="1"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/palabras_clave_noticias" />

            <TextView
                android:id="@+id/fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:text="@string/fecha_noticias"
                android:textAlignment="textEnd" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>