<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview_UIT"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/dinero_sol"
                android:contentDescription="@string/dolar_36"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/UIT_servicio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:gravity="center"
                android:paddingStart="10dp"
                android:text="@string/valor_de_uit"
                android:textColor="@color/blue_dark"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:padding="7dp"
                android:text="@string/uit"
                android:textAlignment="textEnd"
                android:textColor="@color/blue_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valueUIT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:padding="7dp"
                android:text="@string/uit_card"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:padding="7dp"
                android:text="@string/periodo"
                android:textAlignment="textEnd"
                android:textColor="@color/blue_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/periodUIT"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:padding="7dp"
                android:text="@string/periodo_Card"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/siteUIT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:padding="10dp"
                android:text="@string/sitio_home"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

