<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="7dp"
    app:cardElevation="5dp"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/view_img"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="image_cardview_all_item"
            android:scaleType="centerCrop"
            android:src="@drawable/bombero" />

        <View
            android:background="#DFDFDF"
            android:layout_width="wrap_content"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/name_station"
            android:fontFamily="@font/monserrat_alternates_medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:padding="5dp"
            android:text="@string/name_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/district_station"
            android:fontFamily="@font/monserrat_alternates_medium"
            android:textSize="14sp"
            android:padding="5dp"
            android:text="@string/district_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Uploading data apart to reduce views-->
        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/view_img_dos"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/image_card_two" />

            <ImageView
                android:id="@+id/view_img_tres"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/image_card_three" />

            <TextView
                android:id="@+id/direccion_station"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/emergencias_station"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/inicial_station"
                android:layout_width="0dp"
                android:layout_height="0dp"/>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>