<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="5dp"
    android:background="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_news"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:contentDescription="@string/news_card"
            android:scaleType="centerCrop"
            android:background="@color/colorGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:ellipsize="end"
                android:layout_margin="7dp"
                android:padding="4dp"
                android:singleLine="true"
                tools:text="@string/titulo_noticias"
                android:background="@color/colorGrey"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/resumen"
                android:layout_width="match_parent"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:padding="5dp"
                android:background="@color/colorGrey"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="@string/resumen_noticias"
                android:singleLine="true" />

            <TextView
                android:id="@+id/palsclave"
                android:layout_width="match_parent"
                android:layout_marginTop="7dp"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:padding="5dp"
                android:background="@color/colorGrey"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                tools:text="@string/palabras_clave_noticias" />

            <TextView
                android:id="@+id/fecha"
                android:textAlignment="textEnd"
                android:layout_width="250dp"
                android:fontFamily="@font/monserrat_alternates_medium"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_gravity="end"
                android:singleLine="true"
                android:layout_marginTop="7dp"
                android:layout_marginStart="7dp"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="7dp"
                android:padding="5dp"
                android:background="@color/colorGrey"
                android:text="@string/fecha_noticias" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>